--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -82,8 +82,8 @@ followed closely by evolving programming languages. Today, GPUs can be leveraged
 \begin{subfigure}{0.5\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/spmv/roofline_m2050_m2070.eps}
-\caption{Roofline Model for NVidia Kepler K20. SpMV Peak: 36 GFLOP/s.}
-\label{fig:roofline_k20}
+\caption{Roofline Model for NVidia Fermi class GPUs, M2050 and M2070. SpMV Peak: 36 GFLOP/s.}
+\label{fig:roofline_m2070}
 \end{subfigure}
 \begin{subfigure}{0.5\textwidth}
 \centering
