--- a/latex/stokes_revisited.tex
+++ b/latex/stokes_revisited.tex
@@ -1,7 +1,7 @@
 \chapter{Stokes Revisited}
 
 \begin{align}
-\div{[\eta(\grad{\vu} + (\grad{\vu})^T)]} + Ra T \hat{r} & = \grad{p} \label{eq:stokes_momentum} \\
+\div{[\eta(\grad{\vu} + (\grad{\vu})^T)]} + Ra T \hat{r} & = \grad{p} \label{eq:stokes_momentum_original} \\
 \div{\eta(\grad{\vu}} + \div{(\grad{\vu})^T)} + Ra T \hat{r} & = \grad{p} \\
 \grad{\eta} \cdot \grad{\vu} + \eta \div{\grad{\vu}} + \div{(\grad{\vu})^T)} + Ra T \hat{r} & = \grad{p} \\
 \grad{\eta} \cdot \begin{pmatrix} \pd{u}{x} & \pd{u}{y} & \pd{u}{z} \\ \pd{v}{x} & \pd{v}{y} & \pd{v}{z} \\ \pd{w}{x} & \pd{w}{y} & \pd{w}{z} \end{pmatrix} + \eta \div{\begin{pmatrix} \pd{u}{x} & \pd{u}{y} & \pd{u}{z} \\ \pd{v}{x} & \pd{v}{y} & \pd{v}{z} \\ \pd{w}{x} & \pd{w}{y} & \pd{w}{z} \end{pmatrix}} + \div{\begin{pmatrix} \pd{u}{x} & \pd{v}{y} & \pd{w}{z} \\ \pd{u}{x} & \pd{v}{y} & \pd{w}{z} \\ \pd{u}{x} & \pd{v}{y} & \pd{w}{z} \end{pmatrix}} + Ra T \hat{r} & = \grad{p} \\
