--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -61,8 +61,8 @@
 \appendix
 \include{rbffd_avoid_pole_singularities}
 \include{rbffd_weights_on_sphere}
-\include{performance_content/scaling/cut_from_distributed_solver}
-\include{performance_content/optimizations}
+\include{cut_from_distributed_solver}
+\include{optimizations}
 
 %\include{stokes_revisited}
 
